# prisma-python

./: .bumpversion.toml  .gitignore  CHANGELOG.md  PRE_SETUP.md  README.md  dev.py  env.sample  main.py  makefile  pyproject.toml
prisma/: schema.prisma
prisma/migrations/000000000000_squashed_migrations/: migration.sql
scripts/: db_migrate.py
src/: prisma.py  prisma_client.py
src/apis/: __init__.py  auth.py  users.py
src/models/: __init__.py  safe_user.py
src/routes/: __init__.py  auth.py  users.py
src/utils/: auth.py
